add follower handler
